# fs26-crosswalk-detector

./: .dockerignore  .gitignore  .vercelignore  AGENTS.md  Dockerfile.local  Dockerfile.scan  README.md  TODO.md  docker-compose.local.yml  docker-compose.scan.yml  pyproject.toml  remote-controller.config.example.json  vercel.json
cluster/: scan-job.slurm
configs/: local-debug.json  real-dataset-10k.toml  real-dataset.toml  sam3-100k.toml  sam3-500k-masks.toml
datasets/: README.md
docs/: README.md  circle-coverage-validation.md  dataset-strategy.md  exam-notes.md  local-remote-dashboard.md  map-validation-manual-protocol.md  project-decisions.md  project-report-draft.md  project-report.md  real-run-status.md  sam3-100k-data-model.md  sam3-100k-dataset-pipeline.md  sam3-100k-runbook.md  slurm-batch-workflow.md  static-dataset-deployment.md
docs/superpowers/plans/: 2026-05-02-dataset-training-pipeline.md
scripts/: __init__.py  build_crossmask_hard_export.py  build_crossmask_road_channel_export.py  build_osm_wms_dataset.py  download_submission_assets.py  evaluate_crossmask_road_filter.py  export_crossmask_review.py  export_crosswalk_review.py  export_static_metadata_dataset.py  official_bvh_grid_poc.py  official_urban_density_poc.py  road_mask_against_swisstopo.py  run_crossmask_static_masks.py  swisstopo_road_mask_poc.py  urban_extent_poc.py  urban_mask_eval.py  urban_scale_poc.py  urban_vision_poc.py
src/crosswalk_detector/: __init__.py  autopilot.py  cli.py  crossmask_inference.py  dataset.py  input_images.py  metadata_dataset.py  pilot.py  real_config.py  real_pipeline.py  sam3_metadata.py  scan_backend.py  scan_batch.py  scan_server.py  train_crossmask.py  train_mobilenet.py  urban_vision.py  workflow.py
src/crosswalk_detector/data/: __init__.py  dataset.py  input_images.py  raw_imagery.py  real_pipeline.py  sam3_metadata.py  sam3_results.py
src/crosswalk_detector/geo/: __init__.py  (+3 more)
tests/: test_autopilot.py  test_crossmask_inference.py  test_dataset.py  test_input_images.py  test_metadata_dataset.py  test_official_bvh_grid_poc.py  test_pilot.py  test_raw_imagery.py  test_real_pipeline.py  test_road_cluster_grid.py  test_sam3_results.py  test_sam3_suppression.py  test_workflow.py
web/: README.md  dev.ts  eslint.config.mjs  index.html  package.json  run-map-validation.ts  tailnet-url.ts  tsconfig.json  vite.config.ts
web/scripts/: check-scroll-guards.mjs
web/src/: App.tsx  api.ts  app-autopilot.ts  autopilot-planner.test.ts  autopilot-planner.ts  browser-export.ts  browser-workspace.test.ts  browser-workspace.ts  crossmask-runner.ts  dataset-viewport.test.ts  dataset.ts  default-config.ts  error-summary.ts  fake-remote-scan.test.ts  fake-remote-scan.ts  globals.d.ts  local-env.ts  main.tsx  map-basemaps.ts  map-validation.ts  metadata-dataset.test.ts  metadata-dataset.ts  remote-api.ts  remote-cli.ts  remote-controller-defaults.ts  remote-controller-targets.ts  remote-controller.ts  remote-fake-job.ts  remote-job-builder.test.ts  remote-job-builder.ts  remote-job-progress.test.ts  remote-job-progress.ts  remote-run-script.ts  review-state.ts  road-grid.test.ts  road-grid.ts  scan-api.ts  scan-batch.ts  scene-footprint.ts  scene-imagery.ts  (+8 more)
(+34 files in other folders)
